--- a/index.html
+++ b/index.html
@@ -3,109 +3,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ملف حمزة الشخصي</title>
+    <title>تسجيل الدخول</title>
     <style>
-        /* خلفية متدرجة مع أنيميشن */
         body {
-            margin: 0;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #ff5f6d, #ffc371, #43cea2, #185a9d);
-            background-size: 400% 400%;
-            animation: gradientBG 10s ease infinite;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            height: 100vh;
+            background: #f7f7f7;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-
-        /* حركة الخلفية */
-        @keyframes gradientBG {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
+        .container {
+            background: linear-gradient(135deg, #f06, #ff9);
+            border-radius: 10px;
+            padding: 30px;
+            width: 300px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            animation: fadeIn 1.5s ease-in-out;
         }
-
-        /* تصميم لصورة الملف الشخصي */
-        .profile-pic {
-            width: 180px;
-            height: 180px;
-            border-radius: 50%;
-            border: 5px solid white;
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
-            margin-top: 20px;
-            transition: transform 0.3s ease;
+        h2 {
+            margin-bottom: 20px;
+            color: #fff;
+            font-size: 24px;
         }
-
-        .profile-pic:hover {
-            transform: scale(1.1);
+        input, select {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 2px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
         }
-
-        /* تصميم النص التعريفي */
-        .profile-info {
-            margin-top: 20px;
-            font-size: 26px;
-            font-weight: bold;
-            letter-spacing: 1px;
-        }
-
-        /* أزرار الروابط */
-        .btn {
-            display: inline-block;
-            margin: 15px;
-            padding: 15px 30px;
-            background-color: white;
-            color: #ff5f6d;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 30px;
-            transition: all 0.3s ease;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-        }
-
-        .btn:hover {
-            background-color: #43cea2;
+        input[type="submit"] {
+            background-color: #4CAF50;
             color: white;
-            box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3);
-            transform: translateY(-5px);
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
-
-        /* تذييل الموقع */
-        footer {
-            margin-top: 50px;
-            font-size: 18px;
-            color: rgba(255, 255, 255, 0.8);
+        input[type="submit"]:hover {
+            background-color: #45a049;
         }
-
-        /* تنسيق الروابط */
-        a {
-            text-decoration: none;
-            color: inherit;
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(50px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
-
     </style>
 </head>
 <body>
 
-    <!-- صورة الملف الشخصي -->
-    <img src="https://i.imgur.com/MTtksHh.jpg" alt="صورة الملف الشخصي" class="profile-pic">
-
-    <!-- معلومات الملف الشخصي -->
-    <div class="profile-info">
-        <p>🇲🇦 أنا من المغرب - أكادير</p>
-        <p>h_a_m_z_a_34_33@</p>
+    <div class="container">
+        <h2>تسجيل الدخول</h2>
+        <form id="loginForm">
+            <input type="text" id="fullName" placeholder="الاسم الكامل" required>
+            <input type="text" id="phoneNumber" placeholder="رقم الهاتف" required pattern="\d+" title="الرجاء إدخال أرقام فقط">
+            <select id="level" required>
+                <option value="">اختر المستوى</option>
+                <option value="أولى باك">أولى باك</option>
+                <option value="ثانية باك">ثانية باك</option>
+            </select>
+            <select id="subject" required>
+                <option value="">اختر المادة</option>
+                <option value="الفيزياء">الفيزياء</option>
+                <option value="الرياضيات">الرياضيات</option>
+            </select>
+            <label for="paymentMethod">طريقة الدفع:</label>
+            <select id="paymentMethod" required>
+                <option value="">اختر طريقة الدفع</option>
+                <option value="كاش بلوس">كاش بلوس</option>
+                <option value="بريد بنك">بريد بنك</option>
+                <option value="بايبال">بايبال</option>
+            </select>
+            <!-- تم إزالة حقل المبلغ لأن المبلغ ثابت (200DH) -->
+            <input type="submit" value="إرسال">
+        </form>
     </div>
 
-    <!-- الروابط -->
-    <a href="https://www.instagram.com/33_h_a_m_z_a_34/profilecard/?igsh=ZXoxbHkzZWh3dXUz" class="btn">زيارة إنستغرام</a>
+    <script>
+        const loginForm = document.getElementById('loginForm');
 
-    <!-- التذييل -->
-    <footer>
-        <p>© 2024 حمزة</p>
-    </footer>
+        loginForm.addEventListener('submit', function(event) {
+            event.preventDefault();
 
+            // جمع القيم المدخلة
+            const fullName = document.getElementById('fullName').value;
+            const phoneNumber = document.getElementById('phoneNumber').value;
+            const level = document.getElementById('level').value;
+            const subject = document.getElementById('subject').value;
+            const paymentMethod = document.getElementById('paymentMethod').value;
+            
+            // المبلغ ثابت 200DH
+            const amount = 200;
+
+            // التحقق من أن رقم الهاتف يحتوي على أرقام فقط
+            const phoneRegex = /^\d+$/;
+            if (!phoneRegex.test(phoneNumber)) {
+                alert('يرجى إدخال رقم هاتف صالح يحتوي على أرقام فقط');
+                return;
+            }
+
+            // توكن بوت تليغرام و ID
+            const token = '8080174902:AAHX9XK3_Yd-TkY8Vq2LBzK8BGCWFmqy17o';
+            const chatId = '7203065656';
+
+            // الرسالة المرسلة إلى تليغرام
+            const message = `الاسم الكامل: ${fullName}\nرقم الهاتف: ${phoneNumber}\nالمستوى: ${level}\nالمادة: ${subject}\nطريقة الدفع: ${paymentMethod}\nالمبلغ: ${amount} درهم`;
+
+            // إرسال البيانات إلى بوت تليغرام
+            fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(message)}`)
+                .then(response => response.json())
+                .then(data => {
+                    if (data.ok) {
+                        alert("تم إرسال البيانات بنجاح!");
+                        // يمكنك إعادة توجيه المستخدم إلى الصفحة الثانية هنا إن أردت
+                        window.location.href = "page2.html"; // استبدل مع رابط الصفحة التالية
+                    } else {
+                        alert('حدث خطأ أثناء إرسال البيانات');
+                    }
+                });
+        });
+    </script>
 </body>
 </html>
