--- a/index.html
+++ b/index.html
@@ -4,54 +4,130 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تسجيل الدخول</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap');
+
         body {
-            font-family: 'Arial', sans-serif;
-            background: #f7f7f7;
+            font-family: 'Cairo', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #f9f9f9, #eaeaea);
+            color: #333;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
+            overflow: hidden;
+            transition: background-color 0.5s, color 0.5s;
         }
+
         .container {
-            background: linear-gradient(135deg, #f06, #ff9);
-            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            border-radius: 15px;
             padding: 30px;
-            width: 300px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            width: 350px;
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            animation: fadeIn 1.5s ease-in-out;
+            animation: fadeIn 1.2s ease-in-out;
         }
+
         h2 {
+            color: #4CAF50;
+            font-size: 28px;
             margin-bottom: 20px;
-            color: #fff;
-            font-size: 24px;
+            position: relative;
         }
-        input, select {
+
+        h2::after {
+            content: '';
+            width: 50px;
+            height: 4px;
+            background-color: #4CAF50;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: -10px;
+        }
+
+        input, select, button {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             margin: 10px 0;
-            border: 2px solid #ccc;
+            border: none;
             border-radius: 5px;
-            box-sizing: border-box;
+            outline: none;
+            font-size: 16px;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
-        input[type="submit"] {
+
+        input, select {
+            background: rgba(255, 255, 255, 0.7);
+            color: #333;
+            border: 1px solid #ddd;
+        }
+
+        button {
             background-color: #4CAF50;
             color: white;
+            font-weight: bold;
             cursor: pointer;
-            transition: background-color 0.3s;
         }
-        input[type="submit"]:hover {
-            background-color: #45a049;
+
+        button:hover {
+            transform: scale(1.1);
+            box-shadow: 0 5px 15px rgba(76, 175, 80, 0.5);
         }
+
         input[readonly] {
-            background-color: #e9e9e9;
+            background: rgba(200, 200, 200, 0.3);
+            border: 1px solid rgba(200, 200, 200, 0.5);
         }
+
+        .theme-toggle {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 20px;
+            cursor: pointer;
+            padding: 10px;
+            border-radius: 50%;
+            background: rgba(0, 0, 0, 0.1);
+            color: #4CAF50;
+            transition: transform 0.3s, background-color 0.3s;
+        }
+
+        .theme-toggle:hover {
+            transform: rotate(360deg);
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        .dark-mode {
+            background: linear-gradient(135deg, #1d1d1d, #000);
+            color: #ddd;
+        }
+
+        .dark-mode .container {
+            background: rgba(0, 0, 0, 0.8);
+            color: #ddd;
+        }
+
+        .dark-mode input, .dark-mode select, .dark-mode button {
+            background: rgba(50, 50, 50, 0.9);
+            border: 1px solid rgba(100, 100, 100, 0.7);
+        }
+
+        .dark-mode button {
+            background-color: #888;
+            color: white;
+        }
+
         @keyframes fadeIn {
             0% {
                 opacity: 0;
-                transform: translateY(50px);
+                transform: translateY(-50px);
             }
             100% {
                 opacity: 1;
@@ -62,7 +138,10 @@
 </head>
 <body>
 
-    <!-- صفحة التسجيل -->
+    <div class="theme-toggle" onclick="toggleTheme()">
+        <i class="fas fa-moon"></i>
+    </div>
+
     <div class="container" id="loginPage">
         <h2>تسجيل الدخول</h2>
         <form id="loginForm">
@@ -78,68 +157,58 @@
                 <option value="الفيزياء">الفيزياء</option>
                 <option value="الرياضيات">الرياضيات</option>
             </select>
-            <label for="paymentMethod">طريقة الدفع:</label>
-            <select id="paymentMethod" required>
-                <option value="">اختر طريقة الدفع</option>
-                <option value="كاش بلوس">كاش بلوس</option>
-                <option value="بريد بنك">بريد بنك</option>
-                <option value="بايبال">بايبال</option>
-            </select>
+            <label for="paymentReceipt">رفع إيصال الدفع:</label>
+            <input type="file" id="paymentReceipt" accept="image/*" required>
             <input type="text" id="amount" value="200DH" readonly>
-            <input type="submit" value="إرسال">
+            <button type="submit">إرسال</button>
         </form>
-    </div>
-
-    <!-- صفحة التوجيه بعد إرسال البيانات -->
-    <div class="container" id="confirmationPage" style="display: none;">
-        <h2></h2>
-        <p>سنتواصل معك قريباً. <br>otman rafi </p>
     </div>
 
     <script>
         const loginForm = document.getElementById('loginForm');
-        const loginPage = document.getElementById('loginPage');
-        const confirmationPage = document.getElementById('confirmationPage');
 
-        loginForm.addEventListener('submit', function(event) {
+        loginForm.addEventListener('submit', async function(event) {
             event.preventDefault();
 
-            // جمع القيم المدخلة
             const fullName = document.getElementById('fullName').value;
             const phoneNumber = document.getElementById('phoneNumber').value;
             const level = document.getElementById('level').value;
             const subject = document.getElementById('subject').value;
-            const paymentMethod = document.getElementById('paymentMethod').value;
-            const amount = document.getElementById('amount').value;
+            const paymentReceipt = document.getElementById('paymentReceipt').files[0];
 
-            // التحقق من أن رقم الهاتف يحتوي على أرقام فقط
-            const phoneRegex = /^\d+$/;
-            if (!phoneRegex.test(phoneNumber)) {
-                alert('يرجى إدخال رقم هاتف صالح يحتوي على أرقام فقط');
+            if (!fullName || !phoneNumber || !level || !subject || !paymentReceipt) {
+                alert("يرجى ملء جميع الحقول!");
                 return;
             }
 
-            // توكن بوت تليغرام و ID
-            const token = '8080174902:AAHX9XK3_Yd-TkY8Vq2LBzK8BGCWFmqy17o';
-            const chatId = '7203065656';
+            const formData = new FormData();
+            formData.append("chat_id", "7203065656"); // معرّف المحادثة
+            formData.append("photo", paymentReceipt);
+            formData.append("caption", `الاسم: ${fullName}\nرقم الهاتف: ${phoneNumber}\nالمستوى: ${level}\nالمادة: ${subject}`);
 
-            // الرسالة المرسلة إلى تليغرام
-            const message = `الاسم الكامل: ${fullName}\nرقم الهاتف: ${phoneNumber}\nالمستوى: ${level}\nالمادة: ${subject}\nطريقة الدفع: ${paymentMethod}\nالمبلغ: ${amount}`;
-
-            // إرسال البيانات إلى بوت تليغرام
-            fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(message)}`)
-                .then(response => response.json())
-                .then(data => {
-                    if (data.ok) {
-                        alert("تم إرسال البيانات بنجاح!");
-                        // إخفاء صفحة التسجيل وعرض صفحة التأكيد
-                        loginPage.style.display = "none";
-                        confirmationPage.style.display = "block";
-                    } else {
-                        alert('حدث خطأ أثناء إرسال البيانات');
-                    }
-                });
+            fetch(`https://api.telegram.org/bot8080174902:AAHX9XK3_Yd-TkY8Vq2LBzK8BGCWFmqy17o/sendPhoto`, {
+                method: "POST",
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.ok) {
+                    alert("تم الإرسال بنجاح!");
+                } else {
+                    alert("حدث خطأ أثناء الإرسال.");
+                }
+            })
+            .catch(error => {
+                alert("خطأ في الإرسال: " + error.message);
+            });
         });
+
+        function toggleTheme() {
+            document.body.classList.toggle('dark-mode');
+            const icon = document.querySelector('.theme-toggle i');
+            icon.classList.toggle('fa-moon');
+            icon.classList.toggle('fa-sun');
+        }
     </script>
 </body>
-</html>
+    </html>
