--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <option value="الفيزياء">الفيزياء</option>
                 <option value="الرياضيات">الرياضيات</option>
             </select>
-            <label for="paymentReceipt">رفع إيصال الدفع:</label>
+            <label for="paymentReceipt">(بايبال كاش بلوس بريد بنك)رفع إيصال الدفع:</label>
             <input type="file" id="paymentReceipt" accept="image/*" required>
             <input type="text" id="amount" value="200DH" readonly>
             <button type="submit">إرسال</button>
