--- a/index.html
+++ b/index.html
@@ -3,132 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نموذج الشراء</title>
+    <title>مسار النجاح</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(120deg, #e9f5e9, #ffffff);
+            background-color: #f4f9f4;
             color: #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
+            padding: 20px;
         }
+
         .form-container {
-            background: #fff;
+            background-color: white;
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-            width: 500px;
-            text-align: center;
-            border: 2px solid #4caf50;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            margin: 0 auto;
         }
+
         h1 {
-            color: #4caf50;
-            font-size: 26px;
-            margin-bottom: 20px;
+            text-align: center;
+            color: #2C8B57; /* أخضر */
+            font-size: 24px;
         }
+
         label {
             font-size: 16px;
-            margin-bottom: 8px;
+            color: #2C8B57; /* أخضر */
             display: block;
-            color: #4caf50;
+            margin-top: 10px;
         }
+
         input, select, button {
             width: 100%;
             padding: 10px;
+            margin-top: 5px;
             margin-bottom: 15px;
-            border: 1px solid #4caf50;
+            border: 1px solid #ccc;
             border-radius: 5px;
-            font-size: 14px;
-        }
-        input:focus, select:focus {
-            outline: none;
-            border-color: #2e7d32;
-            box-shadow: 0 0 5px #2e7d32;
-        }
-        button {
-            background-color: #4caf50;
-            color: white;
             font-size: 16px;
+        }
+
+        button {
+            background-color: #2C8B57; /* أخضر */
+            color: white;
             cursor: pointer;
         }
+
         button:hover {
-            background-color: #2e7d32;
+            background-color: #267741;
         }
+
+        .action-buttons {
+            text-align: center;
+        }
+
         .action-buttons a {
-            display: inline-block;
-            margin-top: 10px;
-            padding: 10px 20px;
-            background-color: #4caf50;
-            color: white;
             text-decoration: none;
+            background-color: #4682B4; /* أزرق */
+            color: white;
+            padding: 10px 20px;
             border-radius: 5px;
-            font-size: 14px;
-            transition: background 0.3s ease;
+            margin-top: 10px;
+            display: inline-block;
         }
+
         .action-buttons a:hover {
-            background-color: #2e7d32;
+            background-color: #3b7b9b;
         }
+
         .overlay {
+            display: none;
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            display: flex;
-            justify-content: center;
+            background-color: rgba(0, 0, 0, 0.5);
             align-items: center;
-            visibility: hidden;
-            opacity: 0;
-            transition: opacity 0.3s ease, visibility 0.3s ease;
+            justify-content: center;
         }
-        .overlay.active {
-            visibility: visible;
-            opacity: 1;
-        }
+
         .popup {
-            background: #fff;
+            background-color: white;
             padding: 20px;
             border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 300px;
             text-align: center;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-            animation: fadeIn 0.5s ease;
         }
-        .popup h2 {
-            margin: 0 0 10px;
-            color: #4caf50;
-        }
-        .popup p {
-            margin: 0 0 20px;
-        }
-        .popup button {
-            background: #4caf50;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .popup button:hover {
-            background: #2e7d32;
-        }
+
         .popup input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #4caf50;
-            border-radius: 5px;
-            font-size: 14px;
+            width: 80%;
+            margin-top: 10px;
+        }
+
+        .popup button {
+            margin-top: 10px;
+        }
+
+        /* تصميم الرسالة الناجحة مع خلفية شفافة */
+        .success-message {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white (0, 128, 0, 0.8);
+            color: blue  ;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: none;
+            z-index: 1000;
         }
     </style>
 </head>
 <body>
     <div class="form-container">
-        <h1> مسار النجاح </h1>
+        <h1>مسار النجاح</h1>
         <form id="purchaseForm" method="post" enctype="multipart/form-data">
             <label for="name">الاسم الكامل</label>
             <input type="text" id="name" name="name" required>
@@ -170,11 +162,16 @@
         </div>
     </div>
 
-    <script>
-        const correctCode = "osndjdbdishhsvdhdbvd9373738widbjx";
+    <div class="success-message" id="successMessage">
+        <p>تم بنجاح! سيصلك الكود لدخول مجموعة واتساب مع الشروحات.</p>
+    </div>
 
+    <script>
+        const correctCode = "osndjdbdishhsvdhdbvd9373738widbjx"; // الكود الصحيح
+
+        // إرسال النموذج إلى بوت التليجرام
         document.getElementById("purchaseForm").addEventListener("submit", function(event) {
-            event.preventDefault();
+            event.preventDefault(); // لمنع إعادة تحميل الصفحة
 
             const formData = new FormData(this);
             const botUrl = `https://api.telegram.org/bot8080174902:AAHX9XK3_Yd-TkY8Vq2LBzK8BGCWFmqy17o/sendMessage`;
@@ -188,6 +185,7 @@
                 المستوى: ${formData.get('level')}
             `;
 
+            // إرسال النص إلى البوت
             fetch(botUrl, {
                 method: 'POST',
                 body: JSON.stringify({
@@ -199,6 +197,7 @@
                 },
             });
 
+            // إرسال الصورة
             const file = formData.get("paymentProof");
             const fileData = new FormData();
             fileData.append("chat_id", chatId);
@@ -208,34 +207,54 @@
                 method: 'POST',
                 body: fileData,
             })
-            .then(() => showPopup("تم بنجاح", "تم إرسال طلبك بنجاح! شكراً لتعاملك معنا."))
-            .catch(() => showPopup("خطأ", "حدث خطأ أثناء إرسال الطلب. يرجى المحاولة لاحقاً."));
+            .then(() => {
+                // عرض الرسالة الناجحة لمدة 5 ثوانٍ
+                showSuccessMessage("تم بنجاح! سيصلك الكود لدخول مجموعة واتساب مع الشروحات.");
+            })
+            .catch(() => {
+                // في حالة حدوث خطأ أثناء إرسال الطلب
+                alert("حدث خطأ أثناء إرسال الطلب. يرجى المحاولة لاحقاً.");
+            });
         });
 
+        // عرض الرسالة عند النجاح
+        function showSuccessMessage(message) {
+            const successMessageElement = document.getElementById("successMessage");
+            successMessageElement.style.display = 'block'; // عرض الرسالة
+            setTimeout(() => {
+                successMessageElement.style.display = 'none'; // إخفاء الرسالة بعد 5 ثوانٍ
+            }, 5000);
+        }
+
         function verifyCode() {
-            document.getElementById("popupOverlay").classList.add("active");
+            // عند الضغط على زر الدخول الى مجموعة واتساب، يظهر نافذة التحقق
+            showPopup("التحقق من الكود", "يرجى إدخال الكود للمتابعة:");
         }
 
         function submitCode() {
-            const userCode = document.getElementById("userCode").value;
-            if (userCode === correctCode) {
-                showPopup("نجاح", "تم التحقق من الكود. جاري توجيهك...");
-                setTimeout(() => {
-                    window.location.href = "https://chat.whatsapp.com/Jypv0oR7C1kCNpYKQHGHN8";
-                }, 2000);
-            } else {
-                showPopup("خطأ", "الكود غير صحيح. يرجى المحاولة مرة أخرى.");
+            const enteredCode = document.getElementById("userCode").value;
+
+            if (enteredCode === correctCode) {
+                // إذا كان الكود صحيحًا، يتم توجيه المستخدم إلى مجموعة واتساب
+                window.location.href = "https://chat.whatsapp.com/Jypv0oR7C1kCNpYKQHGHN8"; // رابط مجموعة واتساب
             }
-        }
+            else {
+                            // إذا كان الكود غير صحيح، عرض رسالة تنبيه
+                            alert("الكود غير صحيح، يرجى المحاولة مرة أخرى.");
+                        }
+                    }
 
-        function showPopup(title, text) {
-            document.getElementById("popupTitle").innerText = title;
-            document.getElementById("popupText").innerText = text;
-        }
+                    function showPopup(title, text) {
+                        // عرض نافذة التحقق
+                        document.getElementById("popupTitle").textContent = title;
+                        document.getElementById("popupText").textContent = text;
+                        document.getElementById("popupOverlay").style.display = 'flex';
+                    }
 
-        function closePopup() {
-            document.getElementById("popupOverlay").classList.remove("active");
-        }
-    </script>
-</body>
-</html>
+                    function closePopup() {
+                        // إغلاق نافذة التحقق
+                        document.getElementById("popupOverlay").style.display = 'none';
+                    }
+                </script>
+            </body>
+        </html>
