--- a/index.html
+++ b/index.html
@@ -7,47 +7,49 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f9f4;
+            background-color: #fff; /* أبيض */
             color: #333;
             padding: 20px;
         }
 
         .form-container {
-            background-color: white;
-            padding: 30px;
-            border-radius: 10px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
+            max-width: 500px;
             margin: 0 auto;
+            border: 1px solid #2C8B57; /* أخضر */
         }
 
         h1 {
             text-align: center;
             color: #2C8B57; /* أخضر */
-            font-size: 24px;
+            font-size: 28px;
         }
 
         label {
-            font-size: 16px;
+            font-size: 14px;
             color: #2C8B57; /* أخضر */
             display: block;
-            margin-top: 10px;
+            margin-top: 8px;
         }
 
         input, select, button {
             width: 100%;
-            padding: 10px;
+            padding: 8px;
             margin-top: 5px;
             margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            font-size: 16px;
+            font-size: 14px;
         }
 
         button {
             background-color: #2C8B57; /* أخضر */
             color: white;
             cursor: pointer;
+            font-size: 16px;
         }
 
         button:hover {
@@ -72,6 +74,29 @@
             background-color: #3b7b9b;
         }
 
+        /* تصميم الرسالة الناجحة */
+        .success-message {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(0, 128, 0, 0.9); /* أخضر */
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: none;
+            text-align: center;
+            font-size: 18px;
+            z-index: 1000;
+            width: 300px;
+        }
+
+        .success-message p {
+            margin: 0;
+        }
+
+        /* تصميم النافذة المنبثقة */
         .overlay {
             display: none;
             position: fixed;
@@ -102,20 +127,6 @@
             margin-top: 10px;
         }
 
-        /* تصميم الرسالة الناجحة مع خلفية شفافة */
-        .success-message {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: white (0, 128, 0, 0.8);
-            color: blue  ;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            display: none;
-            z-index: 1000;
-        }
     </style>
 </head>
 <body>
@@ -231,30 +242,34 @@
             showPopup("التحقق من الكود", "يرجى إدخال الكود للمتابعة:");
         }
 
+        function showPopup(title, message) {
+            const popupTitle = document.getElementById("popupTitle");
+            const popupText = document.getElementById("popupText");
+            const popupOverlay = document.getElementById("popupOverlay");
+
+            popupTitle.textContent = title;
+            popupText.textContent = message;
+
+            // إظهار النافذة المنبثقة
+            popupOverlay.style.display = "flex";
+        }
+
+        function closePopup() {
+            // إغلاق النافذة المنبثقة
+            const popupOverlay = document.getElementById("popupOverlay");
+            popupOverlay.style.display = "none";
+        }
+
         function submitCode() {
-            const enteredCode = document.getElementById("userCode").value;
+            const userCode = document.getElementById("userCode").value;
 
-            if (enteredCode === correctCode) {
-                // إذا كان الكود صحيحًا، يتم توجيه المستخدم إلى مجموعة واتساب
-                window.location.href = "https://chat.whatsapp.com/Jypv0oR7C1kCNpYKQHGHN8"; // رابط مجموعة واتساب
+            if (userCode === correctCode) {
+                alert("الكود صحيح! سيتم توجيهك إلى مجموعة واتساب.");
+                window.location.href = "https://wa.me/123456789"; // رابط المجموعة
+            } else {
+                alert("الكود غير صحيح. يرجى المحاولة مرة أخرى.");
             }
-            else {
-                            // إذا كان الكود غير صحيح، عرض رسالة تنبيه
-                            alert("الكود غير صحيح، يرجى المحاولة مرة أخرى.");
-                        }
-                    }
-
-                    function showPopup(title, text) {
-                        // عرض نافذة التحقق
-                        document.getElementById("popupTitle").textContent = title;
-                        document.getElementById("popupText").textContent = text;
-                        document.getElementById("popupOverlay").style.display = 'flex';
-                    }
-
-                    function closePopup() {
-                        // إغلاق نافذة التحقق
-                        document.getElementById("popupOverlay").style.display = 'none';
-                    }
-                </script>
-            </body>
-        </html>
+        }
+    </script>
+</body>
+    </html>
