--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
             if (userCode === correctCode) {
                 alert("الكود صحيح! سيتم توجيهك إلى مجموعة واتساب.");
-                window.location.href = "https://wa.me/123456789"; // رابط المجموعة
+                window.location.href = "https://chat.whatsapp.com/Jypv0oR7C1kCNpYKQHGHN8"; // رابط المجموعة
             } else {
                 alert("الكود غير صحيح. يرجى المحاولة مرة أخرى.");
             }
